<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="team_a_score">0</string>
    <string name="button_three_pointer">+3 Points</string>
    <string name="button_two_pointer">+2 Points</string>
    <string name="button_free_throw">Free Throw</string>
    <string name="team_b">Team B</string>
    <string name="reset_button">Reset</string>
</resources>
